--- a/css/styles.css
+++ b/css/styles.css
@@ -139,7 +139,6 @@ section {
   width: 100%;
   z-index: 1;
   opacity: 100%;
-  white-space: nowrap;
 }
 
 #somet {
@@ -218,4 +217,10 @@ iframe {
   height: auto;
   max-width: 200px;
   max-height: 200px;
+}
+
+@media (max-width: 475px) {
+  footer.py-5 {
+    padding-bottom: 25% !important;
+  }
 }
