Add info for ticket excange, modify structure, hide info about ticket sales

--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,7 @@ body {
   font-size: large;
 }
 
-.navbar, .footer, h1, h2 {
+.navbar, .footer, h1, h2, h3 {
   font-family: 'DisketMono', 'Karla', sans-serif;
 }
 
