--- a/css/styles.css
+++ b/css/styles.css
@@ -113,6 +113,11 @@ section {
   max-width: 100% !important;
 }
 
+.logo-container {
+  max-width: 820px !important;
+  padding: 0;
+}
+
 .bg-dark {
   background-color: rgba(255, 72, 4) !important;
   color: white;
@@ -246,4 +251,18 @@ iframe {
 
 .big-link {
   font-size: x-large;
+}
+
+.overlay-text {
+  font-family: 'DisketMono', 'Karla', sans-serif;
+  font-weight: bold;
+  font-style: italic;
+  position: absolute;
+  top: 75%;
+  left: 73%;
+  transform: translate(-50%, -50%);
+  color: #0068f5; 
+  font-size: min(6vw, 60px);
+  text-align: center;
+  -webkit-text-stroke: 0.05em white;
 }
