--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -1,9 +1,11 @@
-<!-- Bootstrap core JavaScript -->
-<script src="/vendor/jquery/jquery.min.js"></script>
-<script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-<!-- Plugin JavaScript -->
-<script src="/vendor/jquery-easing/jquery.easing.min.js"></script>
+{{ $jquery := resources.Get "node/jquery.min.js" }}
+<script src="{{ $jquery.Permalink }}"></script>
+{{ $bootstrap := resources.Get "node/bootstrap.bundle.min.js" }}
+<script src="{{ $bootstrap.Permalink }}"></script>
+{{ $easing := resources.Get "node/jquery.easing.min.js" }}
+<script src="{{ $easing.Permalink }}"></script>
+{{ $popper := resources.Get "node/popper.min.js" }}
+<script src="{{ $popper.Permalink }}"></script>
 
 <!-- Custom JavaScript for this theme -->
 <script src="/js/scripts.js"></script>
