--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -13,183 +13,73 @@
 
 {{ partial "countdown.html" }}
 
-<section id="info" class="white-section">
+<section id="main" class="white-section">
     <div class="container">
-        <div class="row row-custom">
-            <div class="col-lg-8 col-md-6 col-sm 4 mx-auto" hidden>
-                <h1 class="blue-text" data-t>event.name-with-year</h1>
-                <br>
-                <h4 data-t>section.info.coming-soon</h4>
+        <div class="row-custom">
+            <div class="col-lg-8 col-md-6 col-sm-4 mx-auto">
+                <h1 class="blue-text">{{ .Title }}</h1>
             </div>
-            <div class="col-lg-8 col-md-6 col-sm 4 mx-auto">
-                <h1 class="blue-text" data-t>event.name-with-year</h1>
-                <br>
-                <p hidden>
-                    <a
-                        class="big-link js-scroll-trigger"
-                        href="#lipunmyynti"
-                        style="color: dodgerblue; font-weight: 600;"
-                        data-t="section.info.to-sales"
-                    ></a>
-                </p>
-                <p data-t>section.info.thanks</p>
-                <p data-t hidden>section.info.secondary-market</p>
-                <p data-t hidden>section.info.p1</p>
-                <!-- <br> -->  
-                <p data-t>section.info.follow</p>
-                <p data-t hidden>section.info.p2</p>
-            </div>
+            {{ .Content }}
         </div>
     </div>
 </section>
 
-<section id="mita" class="grey-section">
-    <div class="container">
-        <div class="row row-custom">
-            <div class="col-lg-6 col-md-6 mx-auto event-image-wrapper">
-                <figure class="filter filter-blue">
-                    <img class="event-image" src="/images/2022-04.jpg" alt=""/>
-                </figure>
-            </div>
-            <div class="col-lg-6 col-md-6 mx-auto text-align-center">
-                <h2 class="orange-text" data-t>section.what.title</h2>
-                <p data-t>section.what.p1</p>
-                <p data-t>section.what.p2</p>
-            </div>
-        </div>
-    </div>
-</section>
+{{ $odd := true }}
+{{ range .Pages }}
+    {{/* Alternate between white and grey background */}}
+    {{ $sectionClass := "white-section"}}
+    {{ if $odd }}
+        {{ $sectionClass = "grey-section" }}
+    {{ end }}
+    {{ $odd = not $odd }}
 
-<section id="matkanjohtajahaku" class="white-section" hidden>
-    <div class="container">
-        <div class="row row-custom">
-            <div class="col-lg-6 col-md-6 mx-auto event-image-wrapper">
-                <figure class="filter filter-blue">
-                    <img class="event-image" src="/images/2022-04.jpg" alt=""/>
-                </figure>
-            </div>
-            <div class="col-lg-6 col-md-6 mx-auto text-align-center">
-                <h2 class="orange-text" data-t>section.guide-application.title</h2>
-                <p data-t>section.guide-application.p1</p>
-                <p data-t>section.guide-application.p2</p>
-                <p><a href="/matkanjohtajahaku" data-t>section.guide-application.apply</a></p>
-            </div>
-        </div>
-    </div>
-</section>
+    <section id="{{ replace .LinkTitle " " "-" | strings.ToLower }}" class="{{ $sectionClass }}">
+        <div class="container">
+            <div class="row row-custom">
+                {{ if isSet .Params "left-images" }}
+                    {{ $images := .Param "left-images" }}
+                    {{ $filters := .Param "left-image-filters" }}
+                    {{ if ne (len $images) (len $filters)}}
+                        {{ errorf "Page contains differing amount of images and filters" }}
+                    {{ end }}
 
-<section id="lipunmyynti" class="white-section" hidden>
-    <div class="container">
-        <div class="row row-custom">
-            <div class="col-lg-6 col-md-6 mx-auto text-align-center"><h2 class="orange-text" data-t>section.tickets.title</h2>
-                <p data-t>section.tickets.p1</p>
-                <p data-t>section.tickets.p2</p>
-            </div>
-            <div class="col-lg-6 col-md-6 mx-auto event-image-wrapper">
-                <figure class="filter filter-orange">
-                    <img class="event-image" src="/images/2022-03.jpg" alt=""/>
-                </figure>
-            </div>
-        </div>
-    </div>
-</section>
+                    <div class="col-lg-6 col-md-6 mx-auto event-image-wrapper">
+                        {{ range ($images | len)}}
+                            {{ $imageSrc := index $images . }}
+                            {{ $imageFilter := index $filters . }}
+                            <figure class="filter filter-{{ $imageFilter }}">
+                                <img class="event-image" src="{{ $imageSrc }}" alt=""/>
+                            </figure>
+                        {{ end }}
+                    </div>
+                {{ end }}
+                
+                <div class="col-lg-6 col-md-6 col-sm-4 mx-auto">
+                    <h2 class="orange-text">{{ .Title }}</h2>
+                    {{ .Content }}
+                </div>
 
-<section id="jatkot" class="grey-section" hidden>
-    <div class="container">
-        <div class="row row-custom">
-            <div class="col-lg-6 col-md-6 mx-auto event-image-wrapper">
-                <figure class="filter filter-blue">
-                    <img class="event-image" src="/images/2022-01.jpg" alt=""/>
-                </figure>
-            </div>
-            <div class="col-lg-6 col-md-6 mx-auto text-align-center">
-                <h2 class="orange-text" data-t>section.afterparty.title</h2>
-                <p data-t>section.afterparty.p1</p>
-            </div>
-        </div>
-    </div>
-</section>
+                {{ if isSet .Params "right-images" }}
+                    {{ $images := .Param "right-images" }}
+                    {{ $filters := .Param "right-image-filters" }}
+                    {{ if ne (len $images) (len $filters)}}
+                        {{ errorf "Page contains differing amount of images and filters" }}
+                    {{ end }}
 
-<section id="lipunmyynti_vaihto_info" class="grey-section" hidden>
-    <div class="container">
-        <div class="row row-custom">
-            <div class="col-lg-6 col-md-6 mx-auto event-image-wrapper">
-                <figure class="filter filter-blue">
-                    <img class="event-image" src="images/2022-01.jpg" alt=""/>
-                </figure>
-            </div>
-            <div class="col-lg-6 col-md-6 mx-auto text-align-center">
-                <h2 class="blue-text">Lipunmyynti</h2>
-                <p>Jyväsmetron lippuja tullaan myymään tiettyjen ainejärjestöjen omissa lipunmyynneissä 20.3. -
-                    24.3. Jokainen ainejärjestö tiedottaa omasta lipunmyynnistään hyvissä ajoin, joten voit kysyä
-                    ainejärjestösi hallitukselta lisää!
-                </p>
-                <p>
-                    Jos ainejärjestösi ei omista omaa lippukantaa, tai jäit ainejärjestölipunmyynnissä ilman
-                    lippua, ei huolta! Järjestämme myös yleisen lipunmyynnin 27.3. klo 12 alkaen,
-                    jatkuen niin pitkään kuin lippuja on jäljellä! Lipunmyynti tapahtuu Kide.app:ssa.
-                </p>
-                <p>
-                    <a
-                        class="big-link"
-                        href="https://kide.app/events/2aacf4fd-1425-43da-ab49-b25bc8521390"
-                        target="_blank"
-                        rel="noopener noreferrer"
-                        style="color: dodgerblue; font-weight: 600;"
-                    >
-                        Linkki lipunmyyntiin
-                    </a>
-                </p>
-            </div>
-            <div class="col-lg-6 col-md-6 mx-auto text-align-center">
-                <h2 class="blue-text">Lipunvaihto ja info</h2>
-                <p>Metrolinjat lähtevät liikkeelle Agoralta (Mattilanniemi 2, 40100 Jyväskylä). Lähtöpaikan vieressä Agoran takana on
-                    lipunvaihtopiste, jossa voit vaihtaa lippusi rannekkeeseen, sekä Metropiknik, jossa voit nauttia
-                    hyvästä seurasta ja metrotunnelmasta jo ennen tapahtuman alkua!
-                </p>
-                <p>
-                    Tapahtumaan osallistujat saavat tapahtumaa edeltävän viikonlopun aikana sähköpostiviestin, jossa on linkki linjan omaan telegramryhmään, 
-                    sekä yleiseen telegram-tiedotuskanavaan. Linjan omasta ryhmästä tavoitat myös linjasi matkanjohtajan.
-                </p>
-                <h3 class="blue-text">
-                    Lipunvaihto&shy;pisteet:
-                </h3>
-                <p>
-                    Maanantai 17.4. klo. 12:00-18:00 Agora, Linkin opiskelijatila Kattila (AG B437)
-                </p>
-                <p>
-                    Tiistai 18.4. klo. 09:00-11:00 Agora, Linkin opiskelijatila Kattila (AG B437), sekä klo. 13:00-15:00 Agoran takapiha.
-                </p>
-                <p>
-                    Suosittelemme vaihtamaan liput jo maanantaina suurimman ruuhkan välttämiseksi.
-                </p>
-                <p>
-                    Jos et itse pääse vaihtamaan lippuasi lipunvaihtopisteiltä, voit pyytää kaveriasi vaihtamaan sen, 
-                    tai voit sopia asiasta linjasi matkanjohtajan kanssa.
-                </p>
+                    <div class="col-lg-6 col-md-6 mx-auto event-image-wrapper">
+                        {{ range ($images | len)}}
+                            {{ $imageSrc := index $images . }}
+                            {{ $imageFilter := index $filters . }}
+                            <figure class="filter filter-{{ $imageFilter }}">
+                                <img class="event-image" src="{{ $imageSrc }}" alt=""/>
+                            </figure>
+                        {{ end }}
+                    </div>
+                {{ end }}
             </div>
         </div>
-    </div>
-</section>
-
-<section id="aikataulu" class="white-section" hidden>
-    <div class="container">
-        <div class="row row-custom">
-            <div class="col-lg-6 col-md-6 mx-auto text-align-center">
-                <h2 class="orange-text" data-t>section.timetable.title</h2>
-                <img src="/images/Aikataulu.JPG" alt=""/>
-            </div>
-            <div class="col-lg-6 col-md-6 mx-auto event-image-wrapper">
-                <figure class="filter filter-blue">
-                    <img class="event-image" src="/images/2022-02.jpg" alt=""/>
-                </figure>
-                <figure class="filter filter-orange">
-                    <img class="event-image" src="/images/2022-04.jpg" alt=""/>
-                </figure>
-            </div>
-        </div>
-    </div>
-</section>
+    </section>
+{{ end }}
 
 {{ partial "sponsors.html" }}
 
