hook i18n definitions to templates

--- a/layouts/partials/countdown.html
+++ b/layouts/partials/countdown.html
@@ -1,9 +1,9 @@
 <div id="countdown"></div>
 
 <div>
-    <span id="time-until" data-t>section.countdown.time-until</span>
-    <span id="has-begun" data-t>section.countdown.has-begun</span>
-    <span id="has-ended" data-t>section.countdown.has-ended</span>
+    <span id="time-until" data-t hidden>{{ i18n "countdown-until" }}</span>
+    <span id="has-begun" data-t hidden>{{ i18n "countdown-begun" }}</span>
+    <span id="has-ended" data-t hidden>{{ i18n "countdown-ended" }}</span>
 </div>
 
 <!-- countdown JS-->
