--- a/layouts/partials/sponsors.html
+++ b/layouts/partials/sponsors.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row row-custom">
             <div class="col-lg-8 col-md-6 col-sm 4 mx-auto">
-                <h2 class="blue-text" data-t>section.partners.title</h2>
+                <h2 class="blue-text" data-t>{{ i18n "partners" }}</h2>
                 <div class="imgcontainer">
                     <img src="/images/sponsors/Tek.png" class="companyLogo" alt="TEK"/>
                     <img src="/images/sponsors/Jyy.png" class="companyLogo" alt="Jyy" />
