--- a/layouts/partials/poster.html
+++ b/layouts/partials/poster.html
@@ -5,7 +5,7 @@
     <div class="container">
         <div class="col-lg-7 col-md-6 mx-auto logo-container">
             <img src="/images/logo_transparent.png" alt="metro"/>
-            <div class="overlay-text" data-t>event.date</div>
+            <div class="overlay-text" data-t>{{ i18n "date" }}</div>
         </div>
     </div>
 </header>
