masonry layout for sponsors

--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -6,6 +6,7 @@
 <script src="{{ $easing.Permalink }}"></script>
 {{ $popper := resources.Get "node/popper.min.js" }}
 <script src="{{ $popper.Permalink }}"></script>
+{{ $masonry := resources.Get "node/masonry.pkgd.min.js" }}
+<script src="{{ $masonry.Permalink }}"></script>
 
-<!-- Custom JavaScript for this theme -->
 <script src="/js/scripts.js"></script>
