--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,94 +1,72 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    {{ partial "headers.html" }}
-</head>
-
-<body id="page-top">
-
-{{ partial "navigation.html" }}
-
-{{ partial "poster.html" }}
-
-{{ partial "countdown.html" }}
-
-<section id="main" class="white-section">
+{{ define "main" }}
+  {{/* Main content */}}
+  <section id="main" class="white-section">
     <div class="container">
-        <div class="row-custom">
-            <div class="col-lg-8 col-md-6 col-sm-4 mx-auto">
-                <h1 class="blue-text">{{ .Title }}</h1>
-            </div>
-            {{ .Content }}
+      <div class="row-custom">
+        <div class="col-md-8 mx-auto">
+          <h1 class="blue-text">{{ .Title }}</h1>
+          {{ .Content }}
         </div>
+      </div>
     </div>
-</section>
+  </section>
 
-{{ $odd := true }}
-{{ range .Pages }}
+  {{/* Page content */}}
+  {{ $odd := true }}
+  {{ range .Pages }}
     {{/* Alternate between white and grey background */}}
     {{ $sectionClass := "white-section"}}
     {{ if $odd }}
-        {{ $sectionClass = "grey-section" }}
+      {{ $sectionClass = "grey-section" }}
     {{ end }}
     {{ $odd = not $odd }}
 
     <section id="{{ replace .LinkTitle " " "-" | strings.ToLower }}" class="{{ $sectionClass }}">
-        <div class="container">
-            <div class="row row-custom">
-                {{ if isSet .Params "left-images" }}
-                    {{ $images := .Param "left-images" }}
-                    {{ $filters := .Param "left-image-filters" }}
-                    {{ if ne (len $images) (len $filters)}}
-                        {{ errorf "Page contains differing amount of images and filters" }}
-                    {{ end }}
+      <div class="container">
+        <div class="row row-custom">
+          {{ if isSet .Params "left-images" }}
+            {{ $images := .Param "left-images" }}
+            {{ $filters := .Param "left-image-filters" }}
+            {{ if ne (len $images) (len $filters)}}
+              {{ errorf "Page contains differing amount of images and filters" }}
+            {{ end }}
 
-                    <div class="col-lg-6 col-md-6 mx-auto event-image-wrapper">
-                        {{ range ($images | len)}}
-                            {{ $imageSrc := index $images . }}
-                            {{ $imageFilter := index $filters . }}
-                            <figure class="filter filter-{{ $imageFilter }}">
-                                <img class="event-image" src="{{ $imageSrc }}" alt=""/>
-                            </figure>
-                        {{ end }}
-                    </div>
-                {{ end }}
-                
-                <div class="col-lg-6 col-md-6 col-sm-4 mx-auto">
-                    <h2 class="orange-text">{{ .Title }}</h2>
-                    {{ .Content }}
-                </div>
-
-                {{ if isSet .Params "right-images" }}
-                    {{ $images := .Param "right-images" }}
-                    {{ $filters := .Param "right-image-filters" }}
-                    {{ if ne (len $images) (len $filters)}}
-                        {{ errorf "Page contains differing amount of images and filters" }}
-                    {{ end }}
-
-                    <div class="col-lg-6 col-md-6 mx-auto event-image-wrapper">
-                        {{ range ($images | len)}}
-                            {{ $imageSrc := index $images . }}
-                            {{ $imageFilter := index $filters . }}
-                            <figure class="filter filter-{{ $imageFilter }}">
-                                <img class="event-image" src="{{ $imageSrc }}" alt=""/>
-                            </figure>
-                        {{ end }}
-                    </div>
-                {{ end }}
+            <div class="col-md-6 mx-auto event-image-wrapper">
+              {{ range ($images | len)}}
+                {{ $imageSrc := index $images . }}
+                {{ $imageFilter := index $filters . }}
+                <figure class="filter filter-{{ $imageFilter }}">
+                    <img class="event-image" src="{{ $imageSrc }}" alt=""/>
+                </figure>
+              {{ end }}
             </div>
+          {{ end }}
+          
+          <div class="col-md-6 mx-auto text-align-center">
+            <h2 class="orange-text">{{ .Title }}</h2>
+            {{ .Content }}
+          </div>
+
+          {{ if isSet .Params "right-images" }}
+            {{ $images := .Param "right-images" }}
+            {{ $filters := .Param "right-image-filters" }}
+            {{ if ne (len $images) (len $filters)}}
+              {{ errorf "Page contains differing amount of images and filters" }}
+            {{ end }}
+
+            <div class="col-md-6 mx-auto event-image-wrapper">
+              {{ range ($images | len)}}
+                {{ $imageSrc := index $images . }}
+                {{ $imageFilter := index $filters . }}
+                <figure class="filter filter-{{ $imageFilter }}">
+                  <img class="event-image" src="{{ $imageSrc }}" alt=""/>
+                </figure>
+              {{ end }}
+            </div>
+          {{ end }}
         </div>
+      </div>
     </section>
+  {{ end }}
+
 {{ end }}
-
-{{ partial "sponsors.html" }}
-
-{{ partial "instagram.html" }}
-
-{{ partial "footer.html" }}
-
-{{ partial "scripts.html" }}
-
-</body>
-
-</html>
