--- a/layouts/partials/sponsors.html
+++ b/layouts/partials/sponsors.html
@@ -1,14 +1,19 @@
 <section id="baarit" class="white-section">
   <div class="container">
     <div class="d-flex justify-content-center">
-      <div class="col-md-10">
+      <div class="col-md-11">
         <h2 class="blue-text" data-t>{{ i18n "partners" }}</h2>
         <div class="sponsors">
           {{ $sortedByName := sort site.Data.sponsors "name" "asc" }}
           {{ $sortedByImportance := sort $sortedByName "important" "desc" }}
           {{ range $sortedByImportance }}
-              <div class="sponsor col-sm-6 col-md-4 col-lg-3">
-                <img src="{{ .image }}" alt="{{ .name }}" class="companyLogo" {{ with .invert }}style="filter: invert(1);"{{ end }}/>
+              <div class="sponsor col-xs-6 col-sm-6 col-md-4 col-lg-3">
+                <img
+                  src="{{ .image }}"
+                  alt="{{ .name }}"
+                  class="companyLogo"
+                  {{ with .invert }}style="filter: invert(1);"{{ end }}
+                  fetchpriority="low" />
               </div>
           {{ end }}
         </div>
