--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,7 +1,7 @@
 <!-- Footer -->
 <footer class="py-5 bg-dark footer">
     <div class="container">
-        <p class="m-0 text-center text-white">&copy; <span data-t>{{ i18n "organizer" }}</span> <span data-t>{{ i18n "year" }}</span></p>
+        <p class="m-0 text-center text-white">&copy; <span data-t>{{ page.Param "organizer" }}</span> <span data-t>{{ site.Param "year" }}</span></p>
         <div id="somet">
             <a href="https://www.facebook.com/jyvasmetro/" class="fa fa-facebook"></a>
             <a href="https://www.instagram.com/jyvasmetro/" class="fa fa-instagram"></a>
