--- a/layouts/partials/headers.html
+++ b/layouts/partials/headers.html
@@ -1,9 +1,9 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="">
-<meta name="author" content="">
+<meta name="author" content="{{ site.Param "organizer" }}">
 
-<title data-t="event.name"></title>
+<title>{{ site.Param "name" }} {{ site.Param "year" }}</title>
 
 <!-- Bootstrap core CSS -->
 {{ $bootstrap := resources.Get "node/bootstrap.min.css" }}
