--- a/layouts/partials/sponsors.html
+++ b/layouts/partials/sponsors.html
@@ -1,4 +1,4 @@
-<section id="baarit" class="white-section">
+<section id="{{ i18n "partners" | strings.ToLower }}" class="white-section">
   <div class="container">
     <div class="d-flex justify-content-center">
       <div class="col-md-11">
