--- a/layouts/partials/headers.html
+++ b/layouts/partials/headers.html
@@ -5,6 +5,8 @@
 
 <title>{{ site.Param "name" }} {{ site.Param "year" }}</title>
 
+{{ hugo.Generator }}
+
 <!-- Bootstrap core CSS -->
 {{ $bootstrap := resources.Get "node/bootstrap.min.css" }}
 <link rel="stylesheet" href="{{ $bootstrap.Permalink }}">
@@ -15,4 +17,4 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css?family=Karla&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"/>
+<link rel="icon" type="image/x-icon" href="/images/favicon.ico"/>
